Fixed post tags spacing to support minified HTML

--- a/assets/scss/components/_post-tags.scss
+++ b/assets/scss/components/_post-tags.scss
@@ -23,6 +23,7 @@
 
   &__item {
     display: inline-block;
+    margin: 0 0.5rem;
   }
 
   &__list {
